--- a/gb/22/11/25/n13872741.md
+++ b/gb/22/11/25/n13872741.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>郑运鹏：用选票保护进步  台湾下一代的发展</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/11/id13872742-587052-600x400.jpg" />
-<h6>郑运鹏与桃园市长郑文灿及多位桃园好鹏友、年轻伙伴举行“好鹏友们挺3而初记者会”。（民进党桃园市长候选人郑运鹏团队提供）
-</h6>
+<h6>郑运鹏与桃园市长郑文灿及多位桃园好鹏友、年轻伙伴举行“好鹏友们挺3而初记者会”。（民进党桃园市长候选人郑运鹏团队提供）</h6>
 <hr>
 <p>【大纪元2022年11月25日讯】（大纪元记者陈建霖台湾桃园报导）选前最后一天，民进党桃园市长候选人郑运鹏25日行程满档，一早先是邀请桃园市长郑文灿及多位桃园好鹏友、年轻伙伴举行“好鹏友们挺3而初记者会”，接着车队扫街从中坜平镇再到桃园，晚上则是在南北桃园各有一场选前之夜活动。郑运鹏特别喊话希望支持者能多帮忙拉票、催票、投票，用选票保护各县市的进步，也保护台湾下一代的发展。</p>
 <p>郑文灿细数这八年的政绩，包括陂塘公园增加50个、运动中心从0个变成10个、亲子2个增加到22个、公托中心从1个增加到40个、幼儿园增加109个，很多施政预算放在年轻人及年轻家庭身上，郑运鹏这次参选一样要照顾年轻人跟年轻家庭。</p>
@@ -14,40 +13,32 @@
 <p>郑运鹏除讲述对于未来桃园多各项发展政策规划，也向支持者提出4个请托，要拜托大家“今天拉票，明天去投票”、“今天买车票，明天去投票”，别忘了参加晚上分别在南北桃园的两场选前之夜胜选晚会，选前最后一天活动，希望集结大家的力量，用所有政策跟努力让市民全面看见，也希望大家一起来投票。◇</p>
 <p>责任编辑：李悦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/16/n13866922.md#1">全面动员 3Q哥化身3号郑运鹏电话催票员</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/18/n13868342.md#1">高雄市八立委桃园挺郑运鹏 气势惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/20/n13869448.md#1">郑运鹏：三步并一步跑超越郑文灿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/21/n13870013.md#1">陈建仁陪同郑运鹏杨梅车扫  赞：对桃园有贡献</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/22/n13870656.md#1">蔡英文视察桃捷伸线A22站 郑文灿郑运鹏齐协力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/22/n13870903.md#1">遭控与共军往来 郑运鹏：抹红没意义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/23/n13871405.md#1">立委何欣纯大赞：郑运鹏对女性最贴心候选人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329811.md#1">台北荣总桃园分院 柚子皮上的爱传递温暖与关怀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329776.md#1">桃园医院复健科举办病友会 促进复健动力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329757.md#1">桃园推动环保农膜示范区 力推环境友善仙草节</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/6/n10894661.md#1" target="_blank">林傲霜：为了活命的冒险——瞒产私分</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/5/n11500416.md#1" target="_blank">滴水穿石 乌克蘭夫妇的坚韧诚心感化民众</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/20/n14335347.md#1">【未解之谜】比格斯“最后”的预言：互联网将消失？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14336805.md#1">【未解之谜】惊人的巧合 古今中外预言同指：2026大变局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/21/n14335835.md#1">秋分 教给人的生存之道！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/6/n13700595.md#1">【舞蹈】中国古典舞技术技巧第五集：趱步</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315478.md#1">贞观圣主（7）：晋阳宫事 ?风云诡谲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/21/n14335744.md#1">【晚间新闻】以军瞄准真主党 再击毙指挥官</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/25/n14337768.md#1">【时事金扫描】中共战车现俄乌战场 小泽惊人之语</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/25/n14338313.md#1">【马克时空】俄新型洲际导弹试射失败并自爆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14337023.md#1">俄军机再侵犯领空 日F-35等战机首次射弹驱离</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330819.md#1">一家人将120年历史老火车厢改成豪华旅馆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337653.md#1">投资2亿 票房136万 新片《门前宝地》血本无归</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14336426.md#1">IU结束首次世界巡回演出 感谢粉丝的祈祷和支持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14337022.md#1">谢娜公司法人代表发生变更 新增业务令人唏嘘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337742.md#1">陈乔恩出嫁 送亡友乔任梁父母伴手礼获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14336980.md#1">将宠物狗染色 大卫·贝克汉姆长子夫妇挨批</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337297.md#1">有此一说：这4个星座的人最有领导才能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/25/n14338023.md#1">旅馆员工透露 他们在房间里不做这些事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14336642.md#1">为什么你应该每天清理舌头两次？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232333.md#1">头痛腰痛眼疲劳？穴位按摩击退5大职业病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/21/n14335487.md#1">乱世必备防灾食品 给自己及家人多一份保障</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/25/n13872741.htm">郑运鹏：用选票保护进步  台湾下一代的发展</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/25/n13872741.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
